sidebar-menu-2 finalizado

--- a/sidebar-menu-2/style.css
+++ b/sidebar-menu-2/style.css
@@ -44,6 +44,39 @@ body {
   background: var(--color-primary);
 }
 
+.menu {
+  position: absolute;
+  width: 100%;
+  height: calc(100% - 60px);
+  margin-top: 60px;
+  padding: 20px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.menu li {
+  list-style: none;
+}
+
+.menu li a {
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+  font-size: 1em;
+  gap: 10px;
+  text-decoration: none;
+  color: #555;
+}
+
+.menu li a:hover {
+  color: #8338ec;
+}
+
+
+.menu li a ion-icon {
+  font-size: 1em;
+
+}
+
 /*==== navigation ============================ */
 
 .navigation {
@@ -56,6 +89,16 @@ body {
   box-shadow: 0 25px 35px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
+  transition: height 0.5s, width 0.5s;
+  transition-delay: 0s, 0.75s;
+  overflow: hidden;
+}
+
+.navigation.active {
+  width: 300px;
+  height: 400px;
+  transition: width 0.5s, height 0.5s;
+  transition-delay: 0s, 0.75s;
 }
 
 .navigation .userBx {
@@ -63,13 +106,30 @@ body {
   width: 60px;
   height: 60px;
   background: white;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  transition-duration: 0.5s;
+  transition-delay: 0.5s;
+}
+
+.navigation.active .userBx {
+  width: calc(100% - 60px);
+  transition-delay: 0s;
+}
+
+.navigation .userBx .username {
+  white-space: nowrap;
+  color: #555;
+  font-size: 1.1rem;
 }
 
 .navigation .userBx .imgBx {
   position: relative;
   min-width: 60px;
-  height: 60px;  
-  background: black;
+  height: 60px;
+  overflow: hidden;
+  background: black transparent;
   border-radius: 50%;
   border: 10px solid white;
 }
@@ -87,6 +147,38 @@ body {
   position: relative;
   width: 60px;
   height: 60px;
-  background: red;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navigation .menuToggle::before {
+  content: "";
+  position: absolute;
+  width: 32px;
+  height: 2px;
+  background: #555;
+  transform: translateY(-10px);
+  box-shadow: 0 10px #555;
+  transition: 0.5s;
+}
+
+.navigation .menuToggle::after {
+  content: "";
+  position: absolute;
+  width: 32px;
+  height: 2px;
+  background: #555;
+  transform: translateY(10px);
+  transition: 0.5s;
+}
+
+.navigation.active .menuToggle::before {
+  transform: translateY(0px) rotate(45deg);
+  box-shadow: 0 0 #555;
+}
+
+.navigation.active .menuToggle::after {
+  transform: translateY(0px) rotate(-45deg);
 }
